test/error/parser/struct-field-after-method.dsk
let S = struct
    let foo = () -> void
        return
    end
    bar: int
end
